--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,66 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+#homeContainer {
+  padding-top: 5em;
+  text-align: center;
+  max-width: 600px;
+}
+
+#breathContainer {
+  padding-top: 5em;
+  text-align: center;
+  max-width: 550px;
+}
+
+#homeButton {
+  text-decoration: none;
+}
+
+.gamecontainer {
+  border: 1px solid black;
+  background-color: white;
+  border-radius: 7px;
+  margin-top: 1.3em;
+  padding: 1.1em;
+  box-shadow: 2px 10px 8px #888888;
+}
+
+.gamecontainer:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+}
+#seconds {
+  color: white;
+  font-size: 12.3em;
+  font-weight: bold;
+  border: 1px solid white;
+  border-radius: 120px;
+  min-height: 320px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Garamond, serif;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+}
+#breathLabel {
+  font-weight: bold;
+  font-size: 2.3em;
+  font-family: cursive;
+}
+.hidden {
+  display: none;
+  visibility: hidden;
+}
+#quoteArea {
+  padding-top: .7em;
+  padding-bottom: 1.2em;
+  color: black;
+  font-family: cursive;
+}
+
+#gameArea {
+  font-family: cursive;
+}
